--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -71,6 +71,7 @@
   <string name="CID_USED">Device has been used, and if you continue to bind the device, it will be forced to unbind from others, Continue or not?</string>
   <string name="CLEAR">Pulisci</string>
   <string name="CLEAR_DATA">Cancella Cache</string>
+  <string name="CLOSE_BUTTON">Vicino</string>
   <string name="CLOSE_DOOR_SUCCE_MSG">Chiudi la porta con successo</string>
   <string name="CODE_ERR">Codice non valido</string>
   <string name="COMFIRM_NEW_PASS">Conferma nuova password</string>
@@ -427,14 +428,19 @@
   <string name="MESSAGES_DELETE_ICON_MES">Elimina icona e messaggi</string>
   <string name="MESSAGES_DELETE_ICON_POP">Eliminare l\'icona e tutti i messaggi correlati?</string>
   <string name="MESSAGES_DELETE_POP">Eliminare il volto e tutti i messaggi correlati?</string>
+  <string name="MESSAGES_FACE_ANALYSIS">Analisi del flusso passeggeri</string>
   <string name="MESSAGES_FACE_IDENTIFY">Identificare</string>
   <string name="MESSAGES_FACE_INFO">Informazioni sulla faccia</string>
   <string name="MESSAGES_FACE_MABAGE">Gestione del viso</string>
   <string name="MESSAGES_FACE_MOVE">Sposta su un volto esistente</string>
   <string name="MESSAGES_FACE_MOVE_BTN">passare a</string>
+  <string name="MESSAGES_FACE_NEW_VISIT">Nuovi visitatori</string>
   <string name="MESSAGES_FACE_NONE">Senza faccia</string>
+  <string name="MESSAGES_FACE_PEOPLE">persone</string>
+  <string name="MESSAGES_FACE_TADAY_VISIT">Visita di oggi</string>
   <string name="MESSAGES_FACE_VISIT_SUM">%s persone visitate oggi</string>
   <string name="MESSAGES_FACE_VISIT_TIMES">Visita %s volte entro 30 giorni</string>
+  <string name="MESSAGES_FACE_YESTERDAY_VISIT">La visita di ieri</string>
   <string name="MESSAGES_FILTER_ALL">Tutti</string>
   <string name="MESSAGES_FILTER_STRANGER">Sconosciuto</string>
   <string name="MESSAGES_IDENTIFY_ADD_BTN">Aggiungi al volto esistente</string>
@@ -469,7 +475,7 @@
   <string name="MSG_UNBIND">Dispositivo è stato eliminato</string>
   <string name="MSG_UNSHARE">Elimina condivisione con %s</string>
   <string name="MSG_VIDEO">Video</string>
-  <string name="MSG_WARNING">Ricerca in corso&#8230;</string>
+  <string name="MSG_WARNING">Nuovi messaggi</string>
   <string name="MSG_WARN_OFF">Rilevatore di movimento disattivato</string>
   <string name="MSG_WARN_ON">Rilevatore di movimento attivato. L\'apparecchio ti informerà appena qualcosa si muove</string>
   <string name="MUTE">Silenzioso</string>
